@@ -6,6 +6,10 @@ MComix 0.92 (4.0.5)
     - The "Bookmarks" menu can be accessed via the normal menu bar again.
       (by Alan Horkan)
 
+    - The "Copy" menu item has been renamed to "Copy to clipboard". In
+      addition to the currently opened page as bitmap, the path to the
+      current file will also be copied to the clipboard.
+
     - Updated Japanese translation (by Keita Haga)
 
 MComix 0.91
